# rille-status

./: Cargo.toml
src/: baritem.rs  main.rs
src/baritem/: audio.rs  backlight.rs  charge.rs  network.rs  spotify.rs  time.rs  weather.rs
