[package]
name = "rille-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
battery = "0.7.8"
brightness = "0.5.0"
chrono = "0.4.31"
dbus = "0.9.7"
networkmanager = "0.4.0"
regex = "1.10.2"
x11 = "2.21.0"
